// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oneof tests Entry 0, iteration: 0 1`] = `
Object {
  "selection": "faker:random.number",
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 1 1`] = `
Object {
  "selection": 2,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 2 1`] = `
Object {
  "selection": "faker:random.number",
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 3 1`] = `
Object {
  "selection": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 4 1`] = `
Object {
  "selection": 3,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 5 1`] = `
Object {
  "selection": 3,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 6 1`] = `
Object {
  "selection": 3,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 7 1`] = `
Object {
  "selection": 3,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 8 1`] = `
Object {
  "selection": 2,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 0, iteration: 9 1`] = `
Object {
  "selection": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "type": "base type",
}
`;

exports[`Oneof tests Entry 1, iteration: 0 1`] = `
Object {
  "selection": Object {
    "address": Object {
      "types": Array [
        12.4353,
        "faker:random.number",
        Object {
          "nullable": true,
          "type": true,
        },
        Array [
          12,
          13,
          14,
          null,
          false,
          "myString",
        ],
      ],
    },
    "age": 12,
    "name": 14,
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 1 1`] = `
Object {
  "selection": Object {
    "address": Object {
      "types": Array [
        12.4353,
        "faker:random.number",
        Object {
          "nullable": true,
          "type": true,
        },
        Array [
          12,
          13,
          14,
          null,
          false,
          "myString",
        ],
      ],
    },
    "age": 12,
    "name": 14,
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 2 1`] = `
Object {
  "selection": Object {
    "branch": "CSE",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 3 1`] = `
Object {
  "selection": Object {
    "branch": "CSE",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 4 1`] = `
Object {
  "selection": Object {
    "branch": "CSE",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 5 1`] = `
Object {
  "selection": Object {
    "address": Object {
      "types": Array [
        12.4353,
        "faker:random.number",
        Object {
          "nullable": true,
          "type": true,
        },
        Array [
          12,
          13,
          14,
          null,
          false,
          "myString",
        ],
      ],
    },
    "age": 12,
    "name": 14,
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 6 1`] = `
Object {
  "selection": Object {
    "branch": "CSE",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 7 1`] = `
Object {
  "selection": Object {
    "address": Object {
      "types": Array [
        12.4353,
        "faker:random.number",
        Object {
          "nullable": true,
          "type": true,
        },
        Array [
          12,
          13,
          14,
          null,
          false,
          "myString",
        ],
      ],
    },
    "age": 12,
    "name": 14,
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 8 1`] = `
Object {
  "selection": Object {
    "branch": "CSE",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 1, iteration: 9 1`] = `
Object {
  "selection": Object {
    "address": Object {
      "types": Array [
        12.4353,
        "faker:random.number",
        Object {
          "nullable": true,
          "type": true,
        },
        Array [
          12,
          13,
          14,
          null,
          false,
          "myString",
        ],
      ],
    },
    "age": 12,
    "name": 14,
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 2, iteration: 0 1`] = `
Object {
  "selection": true,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 2, iteration: 1 1`] = `
Object {
  "selection": Object {
    "age": Object {
      "nullable": true,
      "type": Object {
        "args": Array [
          Object {
            "max": 100,
            "min": 1,
            "precision": 0.1,
          },
        ],
        "function": "faker:random.number",
      },
    },
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 2, iteration: 2 1`] = `
Object {
  "selection": false,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 2, iteration: 3 1`] = `
Object {
  "selection": Object {
    "age": Object {
      "nullable": true,
      "type": Object {
        "args": Array [
          Object {
            "max": 100,
            "min": 1,
            "precision": 0.1,
          },
        ],
        "function": "faker:random.number",
      },
    },
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 2, iteration: 4 1`] = `
Object {
  "selection": true,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 2, iteration: 5 1`] = `
Object {
  "selection": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 2, iteration: 6 1`] = `
Object {
  "selection": false,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 2, iteration: 7 1`] = `
Object {
  "selection": Object {
    "age": Object {
      "nullable": true,
      "type": Object {
        "args": Array [
          Object {
            "max": 100,
            "min": 1,
            "precision": 0.1,
          },
        ],
        "function": "faker:random.number",
      },
    },
  },
  "type": "resource base",
}
`;

exports[`Oneof tests Entry 2, iteration: 8 1`] = `
Object {
  "selection": 12,
  "type": "base type",
}
`;

exports[`Oneof tests Entry 2, iteration: 9 1`] = `
Object {
  "selection": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "type": "resource base",
}
`;
